@@ -61,7 +61,7 @@ PROCINFO_CLASS const char _dl_powerpc_cap_flags[60][10]
     "", "", "", "",
     "", "", "", "",
     "", "", "", "",
-    "", "", "", "",
+    "", "", "ieee128", "arch_3_00",
     "htm-nosc", "vcrypto", "tar", "isel",
     "ebb", "dscr", "htm", "arch_2_07",
   }
