@@ -1,3 +1,10 @@
+2016-01-08  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>
+
+	* sysdeps/powerpc/bits/hwcap.h: Add PPC_FEATURE2_ARCH_3_00 and
+	PPC_FEATURE2_HAS_IEEE128.
+	* sysdeps/powerpc/dl-procinfo.c:
+	(_dl_powerpc_cap_flags): Add corresponding names to new capabilities.
+
 2016-01-08  John David Anglin  <danglin@gcc.gnu.org>
 
 	[BZ #19415]
